--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <section class="form-login-container">
+      <img src="./assets/images/twitter-logo-brown.png" alt="" />
       <form class="px-4 py-3" id="form-login">
         <div class="mb-3">
           <label class="form-label">Email</label>
@@ -34,9 +35,9 @@
           />
         </div>
         <div class="mb-3"></div>
-        <button type="submit" class="btn btn-primary loginButton">Entrar</button>
+        <button type="submit" class="btn btn-dark loginButton">Entrar</button>
       </form>
-      <a class="btn btn-secondary signupButton" href="#" role="button">Crie uma conta</a>
+      <a class="btn btn-link signupButton" href="#" role="button">Crie uma conta</a>
     </section>
     <script src="./js/script.js"></script>
     <script
