feat: Implementando postagem de tweet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,14 +46,14 @@
     </nav>
 
     <main class="home-container">
-      <form action="" class="px-4 py-3">
+      <form action="" class="px-4 py-3" id="post-form">
         <div class="form-floating mb-3">
           <textarea
             class="form-control"
             placeholder="Leave a comment here"
-            id="floatingTextarea"
+            id="post-form-textarea"
           ></textarea>
-          <label for="floatingTextarea">O que está acontecendo?</label>
+          <label for="post-form-textarea">O que está acontecendo?</label>
         </div>
         <button type="submit" class="btn btn-primary">Postar</button>
       </form>
