--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,12 +33,10 @@
           </button>
           <ul class="dropdown-menu">
             <li>
-              <button class="dropdown-item" href="./profile.html" onclick="loadMyProfileData();">
-                Meu perfil
-              </button>
+              <button class="dropdown-item" onclick="loadMyProfileData();">Meu perfil</button>
             </li>
             <li>
-              <button class="dropdown-item" href="/login.html" onclick="logout();">Sair</button>
+              <button class="dropdown-item" id="logout-button">Sair</button>
             </li>
           </ul>
         </div>
