refactor: Consertando dropdown do header

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
       <div class="container-fluid">
         <a class="navbar-brand">Xwitter</a>
         <!-- <img src="./assets/images/peakpx.jpg" alt="" /> -->
-        <div class="dropdown-center">
+        <div class="btn-group dropstart">
           <button
             type="button"
             class="btn btn-secondary dropdown-toggle"
@@ -32,9 +32,9 @@
             Fulano de tal
           </button>
           <ul class="dropdown-menu">
-            <li>
-              <button class="dropdown-item" onclick="loadMyProfileData();">Meu perfil</button>
-            </li>
+            <!-- <li>
+              <a class="dropdown-item" href="./profile.html">Meu perfil</a>
+            </li> -->
             <li>
               <button class="dropdown-item" id="logout-button">Sair</button>
             </li>
