--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,65 +9,37 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Xwitter</title>
   </head>
   <body>
-    <nav class="navbar bg-dark border-bottom border-body navbar-expand-lg" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand">Xwitter</a>
-        <!-- <img src="./assets/images/peakpx.jpg" alt="" /> -->
-        <div class="btn-group dropstart">
-          <button
-            type="button"
-            class="btn btn-secondary dropdown-toggle"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            id="dropdown-data-user-button"
-          >
-            Fulano de tal
-          </button>
-          <ul class="dropdown-menu">
-            <!-- <li>
-              <a class="dropdown-item" href="./profile.html">Meu perfil</a>
-            </li> -->
-            <li>
-              <button class="dropdown-item" id="logout-button">Sair</button>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <main class="home-container">
-      <form action="" class="px-4 py-3" id="post-form">
-        <div class="form-floating mb-3">
-          <textarea
+    <section class="form-login-container">
+      <img src="./assets/images/twitter-logo-brown.png" alt="" />
+      <form class="px-4 py-3" id="form-login">
+        <div class="mb-3">
+          <label class="form-label">Email</label>
+          <input
+            type="email"
             class="form-control"
-            placeholder="Leave a comment here"
-            id="post-form-textarea"
-          ></textarea>
-          <label for="post-form-textarea">O que está acontecendo?</label>
+            id="login-email-field"
+            placeholder="email@example.com"
+          />
         </div>
-        <button type="submit" class="btn btn-primary">Postar</button>
+        <div class="mb-3">
+          <label class="form-label">Senha</label>
+          <input
+            type="password"
+            class="form-control"
+            id="login-password-field"
+            placeholder="Password"
+          />
+        </div>
+        <div class="mb-3"></div>
+        <button type="submit" class="btn btn-dark loginButton">Entrar</button>
       </form>
-
-      <ul class="nav nav-tabs nav-fill tweets-list-container">
-        <li class="nav-item">
-          <a id="myTweetsTab" class="nav-link active" aria-current="page" href="#">Meus tweets</a>
-        </li>
-        <li class="nav-item">
-          <a id="allTweetsTab" class="nav-link" aria-current="page" href="#">Todos</a>
-        </li>
-      </ul>
-
-      <div id="postContainer"></div>
-    </main>
-    <script src="./js/home.js"></script>
+      <a class="btn btn-link signupButton" href="#" role="button">Crie uma conta</a>
+    </section>
+    <script src="./js/login.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
