--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -15,7 +15,21 @@
   <body>
     <section class="form-login-container">
       <img src="./assets/images/twitter-logo-brown.png" alt="" />
+      <h1 style="align-self: center">Criar conta</h1>
       <form class="px-4 py-3" id="form-login">
+        <div class="mb-3">
+          <label class="form-label">Nome</label>
+          <input type="text" class="form-control" id="login-firstname-field" placeholder="Nome" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Sobrenome</label>
+          <input
+            type="text"
+            class="form-control"
+            id="login-lastname-field"
+            placeholder="Sobrenome"
+          />
+        </div>
         <div class="mb-3">
           <label class="form-label">Email</label>
           <input
@@ -35,11 +49,11 @@
           />
         </div>
         <div class="mb-3"></div>
-        <button type="submit" class="btn btn-dark loginButton">Entrar</button>
+        <button type="submit" class="btn btn-dark loginButton">Criar conta</button>
       </form>
-      <a class="btn btn-link signupButton" href="/signup.html" role="button">Crie uma conta</a>
+      <a class="btn btn-link signupButton" href="/index.html" role="button">Voltar para login</a>
     </section>
-    <script src="./js/index.js"></script>
+    <script src="./js/signup.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
